--- a/Détection et simulation de changements par apprentissage profond.ipynb
+++ b/Détection et simulation de changements par apprentissage profond.ipynb
@@ -14,115 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5a465fa4-e139-4919-970a-3d283cd39011",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: torchgeo in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (0.5.1)\n",
-      "Requirement already satisfied: shapely>=1.7.1 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (2.0.2)\n",
-      "Requirement already satisfied: matplotlib>=3.3.3 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (3.10.1)\n",
-      "Requirement already satisfied: torchmetrics>=0.10 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (1.2.1)\n",
-      "Requirement already satisfied: rtree>=1 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (1.1.0)\n",
-      "Requirement already satisfied: numpy>=1.19.3 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (1.26.4)\n",
-      "Requirement already satisfied: torch>=1.12 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (2.7.0)\n",
-      "Requirement already satisfied: einops>=0.3 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (0.7.0)\n",
-      "Requirement already satisfied: kornia>=0.6.9 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (0.7.0)\n",
-      "Requirement already satisfied: torchvision>=0.13 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (0.22.0)\n",
-      "Requirement already satisfied: pyproj>=3 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (3.6.1)\n",
-      "Requirement already satisfied: rasterio>=1.2 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (1.3.9)\n",
-      "Requirement already satisfied: timm>=0.4.12 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (0.9.2)\n",
-      "Requirement already satisfied: pillow>=8 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (10.1.0)\n",
-      "Requirement already satisfied: pandas>=1.1.3 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (2.1.4)\n",
-      "Requirement already satisfied: segmentation-models-pytorch>=0.2 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (0.3.3)\n",
-      "Requirement already satisfied: lightly>=1.4.4 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (1.4.23)\n",
-      "Requirement already satisfied: fiona>=1.8.19 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (1.9.6)\n",
-      "Requirement already satisfied: lightning[pytorch-extra]>=2 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torchgeo) (2.1.2)\n",
-      "Requirement already satisfied: certifi in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from fiona>=1.8.19->torchgeo) (2023.11.17)\n",
-      "Requirement already satisfied: click-plugins>=1.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from fiona>=1.8.19->torchgeo) (1.1.1)\n",
-      "Requirement already satisfied: click~=8.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from fiona>=1.8.19->torchgeo) (8.1.7)\n",
-      "Requirement already satisfied: six in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from fiona>=1.8.19->torchgeo) (1.16.0)\n",
-      "Requirement already satisfied: cligj>=0.5 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from fiona>=1.8.19->torchgeo) (0.7.2)\n",
-      "Requirement already satisfied: attrs>=19.2.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from fiona>=1.8.19->torchgeo) (23.1.0)\n",
-      "Requirement already satisfied: packaging in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from kornia>=0.6.9->torchgeo) (23.2)\n",
-      "Requirement already satisfied: urllib3>=1.15.1 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightly>=1.4.4->torchgeo) (2.1.0)\n",
-      "Requirement already satisfied: hydra-core>=1.0.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightly>=1.4.4->torchgeo) (1.3.2)\n",
-      "Requirement already satisfied: tqdm>=4.44 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightly>=1.4.4->torchgeo) (4.67.1)\n",
-      "Requirement already satisfied: pydantic<2,>=1.10.5 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightly>=1.4.4->torchgeo) (1.10.24)\n",
-      "Requirement already satisfied: setuptools>=21.0.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightly>=1.4.4->torchgeo) (78.0.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.5.3 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightly>=1.4.4->torchgeo) (2.8.2)\n",
-      "Requirement already satisfied: requests>=2.23.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightly>=1.4.4->torchgeo) (2.32.3)\n",
-      "Requirement already satisfied: pytorch-lightning>=1.0.4 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightly>=1.4.4->torchgeo) (2.1.2)\n",
-      "Requirement already satisfied: lightly-utils~=0.0.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightly>=1.4.4->torchgeo) (0.0.2)\n",
-      "Requirement already satisfied: aenum>=3.1.11 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightly>=1.4.4->torchgeo) (3.1.15)\n",
-      "Requirement already satisfied: typing-extensions<6.0,>=4.0.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightning[pytorch-extra]>=2->torchgeo) (4.13.2)\n",
-      "Requirement already satisfied: lightning-utilities<2.0,>=0.8.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightning[pytorch-extra]>=2->torchgeo) (0.10.0)\n",
-      "Requirement already satisfied: PyYAML<8.0,>=5.4 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightning[pytorch-extra]>=2->torchgeo) (6.0.1)\n",
-      "Requirement already satisfied: fsspec[http]<2025.0,>2021.06.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightning[pytorch-extra]>=2->torchgeo) (2024.12.0)\n",
-      "Requirement already satisfied: rich<14.0,>=12.3.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightning[pytorch-extra]>=2->torchgeo) (13.7.0)\n",
-      "Requirement already satisfied: jsonargparse[signatures]<5.0,>=4.18.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightning[pytorch-extra]>=2->torchgeo) (4.27.1)\n",
-      "Requirement already satisfied: bitsandbytes<1.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightning[pytorch-extra]>=2->torchgeo) (0.41.3.post1)\n",
-      "Requirement already satisfied: tensorboardX<3.0,>=2.2 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightning[pytorch-extra]>=2->torchgeo) (2.6.2.2)\n",
-      "Requirement already satisfied: omegaconf<3.0,>=2.0.5 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from lightning[pytorch-extra]>=2->torchgeo) (2.3.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from matplotlib>=3.3.3->torchgeo) (1.4.5)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from matplotlib>=3.3.3->torchgeo) (3.1.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from matplotlib>=3.3.3->torchgeo) (4.46.0)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from matplotlib>=3.3.3->torchgeo) (1.2.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from matplotlib>=3.3.3->torchgeo) (0.12.1)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from pandas>=1.1.3->torchgeo) (2023.3.post1)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from pandas>=1.1.3->torchgeo) (2023.3)\n",
-      "Requirement already satisfied: snuggs>=1.4.1 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from rasterio>=1.2->torchgeo) (1.4.7)\n",
-      "Requirement already satisfied: affine in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from rasterio>=1.2->torchgeo) (2.4.0)\n",
-      "Requirement already satisfied: efficientnet-pytorch==0.7.1 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from segmentation-models-pytorch>=0.2->torchgeo) (0.7.1)\n",
-      "Requirement already satisfied: pretrainedmodels==0.7.4 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from segmentation-models-pytorch>=0.2->torchgeo) (0.7.4)\n",
-      "Requirement already satisfied: huggingface-hub in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from timm>=0.4.12->torchgeo) (0.28.1)\n",
-      "Requirement already satisfied: safetensors in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from timm>=0.4.12->torchgeo) (0.4.1)\n",
-      "Requirement already satisfied: munch in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from pretrainedmodels==0.7.4->segmentation-models-pytorch>=0.2->torchgeo) (4.0.0)\n",
-      "Requirement already satisfied: nvidia-cusparselt-cu12==0.6.3 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (0.6.3)\n",
-      "Requirement already satisfied: nvidia-cusparse-cu12==12.5.4.2 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (12.5.4.2)\n",
-      "Requirement already satisfied: triton==3.3.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (3.3.0)\n",
-      "Requirement already satisfied: jinja2 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (3.1.2)\n",
-      "Requirement already satisfied: nvidia-curand-cu12==10.3.7.77 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (10.3.7.77)\n",
-      "Requirement already satisfied: nvidia-cusolver-cu12==11.7.1.2 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (11.7.1.2)\n",
-      "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.6.77 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (12.6.77)\n",
-      "Requirement already satisfied: nvidia-nccl-cu12==2.26.2 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (2.26.2)\n",
-      "Requirement already satisfied: nvidia-nvtx-cu12==12.6.77 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (12.6.77)\n",
-      "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.6.77 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (12.6.77)\n",
-      "Requirement already satisfied: nvidia-cufile-cu12==1.11.1.6 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (1.11.1.6)\n",
-      "Requirement already satisfied: filelock in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (3.13.1)\n",
-      "Requirement already satisfied: nvidia-nvjitlink-cu12==12.6.85 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (12.6.85)\n",
-      "Requirement already satisfied: nvidia-cudnn-cu12==9.5.1.17 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (9.5.1.17)\n",
-      "Requirement already satisfied: networkx in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (3.2.1)\n",
-      "Requirement already satisfied: nvidia-cufft-cu12==11.3.0.4 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (11.3.0.4)\n",
-      "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.6.80 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (12.6.80)\n",
-      "Requirement already satisfied: sympy>=1.13.3 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (1.13.3)\n",
-      "Requirement already satisfied: nvidia-cublas-cu12==12.6.4.1 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from torch>=1.12->torchgeo) (12.6.4.1)\n",
-      "Requirement already satisfied: aiohttp!=4.0.0a0,!=4.0.0a1 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from fsspec[http]<2025.0,>2021.06.0->lightning[pytorch-extra]>=2->torchgeo) (3.9.1)\n",
-      "Requirement already satisfied: antlr4-python3-runtime==4.9.* in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from hydra-core>=1.0.0->lightly>=1.4.4->torchgeo) (4.9.3)\n",
-      "Requirement already satisfied: docstring-parser>=0.15 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from jsonargparse[signatures]<5.0,>=4.18.0->lightning[pytorch-extra]>=2->torchgeo) (0.15)\n",
-      "Requirement already satisfied: typeshed-client>=2.1.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from jsonargparse[signatures]<5.0,>=4.18.0->lightning[pytorch-extra]>=2->torchgeo) (2.4.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from requests>=2.23.0->lightly>=1.4.4->torchgeo) (3.6)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from requests>=2.23.0->lightly>=1.4.4->torchgeo) (3.3.2)\n",
-      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from rich<14.0,>=12.3.0->lightning[pytorch-extra]>=2->torchgeo) (2.17.2)\n",
-      "Requirement already satisfied: markdown-it-py>=2.2.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from rich<14.0,>=12.3.0->lightning[pytorch-extra]>=2->torchgeo) (3.0.0)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from sympy>=1.13.3->torch>=1.12->torchgeo) (1.3.0)\n",
-      "Requirement already satisfied: protobuf>=3.20 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from tensorboardX<3.0,>=2.2->lightning[pytorch-extra]>=2->torchgeo) (3.20.3)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from jinja2->torch>=1.12->torchgeo) (2.1.3)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2025.0,>2021.06.0->lightning[pytorch-extra]>=2->torchgeo) (1.9.4)\n",
-      "Requirement already satisfied: async-timeout<5.0,>=4.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2025.0,>2021.06.0->lightning[pytorch-extra]>=2->torchgeo) (4.0.3)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2025.0,>2021.06.0->lightning[pytorch-extra]>=2->torchgeo) (1.3.1)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2025.0,>2021.06.0->lightning[pytorch-extra]>=2->torchgeo) (1.4.0)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<2025.0,>2021.06.0->lightning[pytorch-extra]>=2->torchgeo) (6.0.4)\n",
-      "Requirement already satisfied: mdurl~=0.1 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from markdown-it-py>=2.2.0->rich<14.0,>=12.3.0->lightning[pytorch-extra]>=2->torchgeo) (0.1.2)\n",
-      "Requirement already satisfied: importlib-resources>=1.4.0 in /home/NAudebert/.venvs/dl/lib/python3.10/site-packages (from typeshed-client>=2.1.0->jsonargparse[signatures]<5.0,>=4.18.0->lightning[pytorch-extra]>=2->torchgeo) (6.1.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install torchgeo"
    ]
@@ -173,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "oscd_dataset = torchgeo.datasets.OSCD(root=\"/home/NAudebert/Données/\", split=\"train\", bands=\"rgb\", download=True)"
+    "oscd_dataset = torchgeo.datasets.OSCD(root=\"data/\", split=\"train\", bands=\"rgb\", download=True)"
    ]
   },
   {
