Use explicit band naming convention for OSCD

--- a/Détection et simulation de changements par apprentissage profond.ipynb
+++ b/Détection et simulation de changements par apprentissage profond.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "oscd_dataset = torchgeo.datasets.OSCD(root=\"data/\", split=\"train\", bands=\"rgb\", download=True)"
+    "oscd_dataset = torchgeo.datasets.OSCD(root=\"data/\", split=\"train\", bands=(\"B04\", \"B03\", \"B02\"), download=True)"
    ]
   },
   {
