Set torch and torchgeo versions

--- a/Détection et simulation de changements par apprentissage profond.ipynb
+++ b/Détection et simulation de changements par apprentissage profond.ipynb
@@ -112,8 +112,8 @@
    ],
    "source": [
     "idx = 0\n",
-    "image_before = oscd_dataset[idx]['image'][:3] # first image is stored in channels 1,2,3\n",
-    "image_after = oscd_dataset[idx]['image'][3:] # second image is stored in channels 4,5,6\n",
+    "image_before = oscd_dataset[idx]['image1']\n",
+    "image_after = oscd_dataset[idx]['image2']\n",
     "mask = oscd_dataset[idx]['mask']\n",
     "\n",
     "print(image_before.shape)\n",
