Install requirements as first cell

--- a/Introduction au deep learning pour l'OCS.ipynb
+++ b/Introduction au deep learning pour l'OCS.ipynb
@@ -15,6 +15,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3c2c0f49-e1b7-438f-9560-438e4b19241d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "b6c0a9f2",
    "metadata": {
